# voxscribe

./: README.md  pyproject.toml  requirements.txt  settings.toml
src/: __init__.py  __main__.py  app.py  audio.py  config.py  hotkeys.py  injector.py  overlay.py  rewritter.py  transcriber.py  tray.py
