[project]
name = "voxscribe"
version = "0.1.0"
description = "Local speech-to-text and AI-powered Smart Write desktop utility"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "faster-whisper>=1.0.0",
    "httpx>=0.27",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "pynput>=1.7.6",
    "tomli>=2.0; python_version<'3.11'",
    "tomli-w>=1.0",
    "pyperclip>=1.8",
]

[project.scripts]
voxscribe = "voxscribe.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"